# claude-dashboard

./: .gitignore  LICENSE  README.md  claude-dashboard-server.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: README.md  generate_screenshot.py  install_menubar_app.sh  mock_demo.py
src/claude_dashboard/: data.py  menubar.py  server.py  ui.py  utils.py
tests/: test_server.py
