[project]
name = "claude-dashboard"
version = "0.1.0"
description = "Visual dashboard for browsing Claude Code projects, sessions, and memory"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.scripts]
claude-dashboard = "claude_dashboard.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dashboard"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
